dispatch type flight working

--- a/IowaCityDispatchCenter/src/main/resources/edm.yaml
+++ b/IowaCityDispatchCenter/src/main/resources/edm.yaml
@@ -4,35 +4,50 @@ propertyTypes:
   analyzer: "STANDARD"
   properties:
   - type: "ICDC.OfficerId"
-    title: "Officer ID"
-    description: "Officer ID"
+    title: "OfficerId"
+    description: "OfficerId"
+  - type: "ICDC.AssignedOfficerId"
+    title: "AssignedOfficerId"
+    description: "AssignedOfficerId"
+  - type: "ICDC.CallForServiceOfficerId"
+    title: "CallForServiceOfficerId"
+    description: "CallForServiceOfficerId"
   - type: "ICDC.CaseId"
-    title: "Case ID"
-    description: "Case ID"
-- datatype: "Int32"
+    title: "CaseId"
+    description: "CaseId"
+  - type: "ICDC.CallForServiceId"
+    title: "CallForServiceId"
+    description: "CallForServiceId"
+  - type: "ICDC.IncidentMasterAddressId"
+    title: "IncidentMasterAddressId"
+    description: "IncidentMasterAddressId"
+- datatype: "Int16"
+  piiField: false
+  analyzer: "STANDARD"
+  properties:
+  - type: "ICDC.Priority"
+    title: "Priority"
+    description: "Priority"
+- datatype: "Int64"
   piiField: false
   analyzer: "STANDARD"
   properties:
   - type: "ICDC.DispatchId"
-    title: "Dispatch ID"
-    description: "Dispatch ID"
+    title: "DispatchId"
+    description: "DispatchId"
+  - type: "ICDC.DispatchTypeId"
+    title: "DispatchTypeId"
+    description: "DispatchTypeId"
   - type: "ICDC.DispatchNumber"
-    title: "Dispatch Number"
-    description: "Dispatch Number"
+    title: "DispatchNumber"
+    description: "DispatchNumber"
 - datatype: "Date"
   piiField: false
   analyzer: "STANDARD"
   properties:
   - type: "ICDC.DispatchDate"
-    title: "Dispatch Date"
-    description: "Dispatch Date"
-- datatype: "TimeOfDay"
-  piiField: false
-  analyzer: "STANDARD"
-  properties:
-  - type: "ICDC.DispatchTime"
-    title: "Dispatch Time"
-    description: "Dispatch Time"
+    title: "DispatchDate"
+    description: "DispatchDate"
 - datatype: "DateTimeOffset"
   piiField: false
   analyzer: "STANDARD"
@@ -40,43 +55,75 @@ propertyTypes:
   - type: "ICDC.CFSDateTimeJanet"
     title: "CFSDateTimeJanet"
     description: "CFSDateTimeJanet"
+  - type: "ICDC.AlertedDateTime"
+    title: "AlertedDateTime"
+    description: "AlertedDateTime"
+  - type: "ICDC.DispatchDateTime"
+    title: "DispatchDateTime"
+    description: "DispatchDateTime"
+  - type: "ICDC.TimerCvdDateTime"
+    title: "TimerCvdDateTime"
+    description: "TimerCvdDateTime"
+  - type: "ICDC.TimeCompDateTime"
+    title: "TimeCompDateTime"
+    description: "TimeCompDateTime"
+  - type: "ICDC.TimeArrDateTime"
+    title: "TimeArrDateTime"
+    description: "TimeArrDateTime"
+  - type: "ICDC.TimeEnRouteDateTime"
+    title: "TimeEnRouteDateTime"
+    description: "TimeEnRouteDateTime"
+- datatype: "TimeOfDay"
+  piiField: false
+  analyzer: "STANDARD"
+  properties:
+  - type: "ICDC.DispatchTime"
+    title: "DispatchTime"
+    description: "DispatchTime"
+- datatype: "Boolean"
+  piiField: false
+  analyzer: "STANDARD"
+  properties:
+  - type: "ICDC.Active"
+    title: "Active"
+    description: "Active"
 - datatype: "String"
   piiField: false
   analyzer: "STANDARD"
   properties:
   - type: "ICDC.FirstName"
-    title: "First Name"
-    description: "First Name"
+    title: "FirstName"
+    description: "FirstName"
   - type: "ICDC.LastName"
-    title: "Last Name"
-    description: "Last Name"
+    title: "LastName"
+    description: "LastName"
   - type: "ICDC.Title"
     title: "Title"
     description: "Title"
   - type: "ICDC.EmployeeId"
-    title: "Employee ID"
-    description: "Employee ID"
+    title: "EmployeeId"
+    description: "EmployeeId"
   - type: "ICDC.ORI"
     title: "ORI"
     description: "ORI"
   - type: "ICDC.DispatchCase"
-    title: "Dispatch Case"
-    description: "Dispatch Case"
+    title: "DispatchCase"
+    description: "DispatchCase"
   - type: "ICDC.DispatchZone"
-    title: "Dispatch Zone"
-    description: "Dispatch Zone"
+    title: "DispatchZone"
+    description: "DispatchZone"
   - type: "ICDC.DispatchORI"
-    title: "Dispatch ORI"
-    description: "Dispatch ORI"
+    title: "DispatchORI"
+    description: "DispatchORI"
   - type: "ICDC.CaseNumber"
-    title: "Case Number"
-    description: "Case Number"
+    title: "CaseNumber"
+    description: "CaseNumber"
   - type: "ICDC.Operator"
     title: "Operator"
     description: "Operator"
   - type: "ICDC.HowReported"
     title: "HowReported"
-    description: "How the case was reported"
+    description: "HowReported"
   - type: "ICDC.LName"
     title: "LName"
     description: "LName"
@@ -176,36 +223,21 @@ propertyTypes:
   - type: "ICDC.FireDispatchLevel"
     title: "FireDispatchLevel"
     description: "FireDispatchLevel"
-  - type: "ICDC.CFS_Fire"
-    title: "CFS_Fire"
-    description: "CFS_Fire"
-  - type: "ICDC.CFS_EMS"
-    title: "CFS_EMS"
-    description: "CFS_EMS"
-  - type: "ICDC.CFS_LEA"
-    title: "CFS_LEA"
-    description: "CFS_LEA"
-  - type: "ICDC.IncidentMasterAddressId"
-    title: "IncidentMasterAddressId"
-    description: "IncidentMasterAddressId"
+  - type: "ICDC.CFSFire"
+    title: "CFSFire"
+    description: "CFSFire"
+  - type: "ICDC.CFSEMS"
+    title: "CFSEMS"
+    description: "CFSEMS"
+  - type: "ICDC.CFSLEA"
+    title: "CFSLEA"
+    description: "CFSLEA"
   - type: "ICDC.FireDistrict"
     title: "FireDistrict"
     description: "FireDistrict"
   - type: "ICDC.LinkedLEA"
     title: "LinkedLEA"
     description: "LinkedLEA"
-  - type: "ICDC.CallForServiceId"
-    title: "CallForServiceId"
-    description: "CallForServiceId"
-  - type: "ICDC.AssignedOfficerId"
-    title: "AssignedOfficerId"
-    description: "AssignedOfficerId"
-  - type: "ICDC.Priority"
-    title: "Priority"
-    description: "Priority"
-  - type: "ICDC.AlertedTime"
-    title: "AlertedTime"
-    description: "AlertedTime"
   - type: "ICDC.ParentDispatchId"
     title: "ParentDispatchId"
     description: "ParentDispatchId"
@@ -215,18 +247,19 @@ propertyTypes:
   - type: "ICDC.UpsizeTs"
     title: "UpsizeTs"
     description: "UpsizeTs"
-- datatype: "Boolean"
-  piiField: false
-  analyzer: "STANDARD"
-  properties:
-  - type: "ICDC.Active"
-    title: "Active"
-    description: "Indicates whether the person is an active/inactive employee, or in other words, a current/past employee."
-
+  - type: "ICDC.Unit"
+    title: "Unit"
+    description: "Unit"
+  - type: "ICDC.Disposition"
+    title: "Disposition"
+    description: "Disposition"
+  - type: "ICDC.TripNumber"
+    title: "TripNumber"
+    description: "TripNumber"
 entityTypes:
 - type: "ICDC.Employee"
   title: "Employee"
-  description: "An employee"
+  description: "Employee"
   baseType: null
   key:
   - "ICDC.EmployeeId"
@@ -284,9 +317,6 @@ entityTypes:
   - "ICDC.PROQALevel"
   - "ICDC.PROQAType"
   - "ICDC.MobileStatus"
-  - "ICDC.IsCallStackCleared"
-  - "ICDC.IsCallStackCaution"
-  - "ICDC.IsCallStackAttention"
   - "ICDC.Latitude"
   - "ICDC.Longitude"
   - "ICDC.ZoneId"
@@ -294,9 +324,9 @@ entityTypes:
   - "ICDC.NoSubZoneOK"
   - "ICDC.ESN"
   - "ICDC.FireDispatchLevel"
-  - "ICDC.CFS_Fire"
-  - "ICDC.CFS_EMS"
-  - "ICDC.CFS_LEA"
+  - "ICDC.CFSFire"
+  - "ICDC.CFSEMS"
+  - "ICDC.CFSLEA"
   - "ICDC.IncidentMasterAddressId"
   - "ICDC.FireDistrict"
   - "ICDC.LinkedLEA"
@@ -304,11 +334,35 @@ entityTypes:
   - "ICDC.AssignedOfficerId"
   - "ICDC.Priority"
   - "ICDC.CFSDateTimeJanet"
-  - "ICDC.AlertedTime"
+  - "ICDC.AlertedDateTime"
   - "ICDC.ParentDispatchId"
   - "ICDC.MedicalZone"
   - "ICDC.UpsizeTs"
-
+- type: "ICDC.DispatchType"
+  title: "DispatchType"
+  description: "DispatchType"
+  baseType: null
+  key:
+  - "ICDC.DispatchTypeId"
+  - "ICDC.DispatchId"
+  properties:
+  - "ICDC.DispatchTypeId"
+  - "ICDC.DispatchId"
+  - "ICDC.DispatchDateTime"
+  - "ICDC.CaseId"
+  - "ICDC.CaseNumber"
+  - "ICDC.TimerCvdDateTime"
+  - "ICDC.TimeCompDateTime"
+  - "ICDC.TimeArrDateTime"
+  - "ICDC.TimeEnRouteDateTime"
+  - "ICDC.Unit"
+  - "ICDC.Priority"
+  - "ICDC.CallForServiceOfficerId"
+  - "ICDC.Disposition"
+  - "ICDC.TripNumber"
+  - "ICDC.TypeId"
+  - "ICDC.OfficerId"
+associationTypes: []
 entitySets:
 - type: "ICDC.Employee"
   name: "IowaCityDispatchCenter_Employees"
@@ -324,5 +378,10 @@ entitySets:
   contacts:
   - "David-Schwindt@iowa-city.org"
   - "support@openlattice.com"
-
-associationTypes: []
+- type: "ICDC.DispatchType"
+  name: "IowaCityDispatchCenter_DispatchTypes"
+  title: "Iowa City Dispatch Center - Dispatch Types"
+  description: "All Iowa City Dispatch Center Dispatch Types"
+  contacts:
+  - "David-Schwindt@iowa-city.org"
+  - "support@openlattice.com"
