dispatch persons flight working

--- a/IowaCityDispatchCenter/src/main/resources/edm.yaml
+++ b/IowaCityDispatchCenter/src/main/resources/edm.yaml
@@ -21,6 +21,9 @@ propertyTypes:
   - type: "ICDC.IncidentMasterAddressId"
     title: "IncidentMasterAddressId"
     description: "IncidentMasterAddressId"
+  - type: "ICDC.CallForServicePersonId"
+    title: "CallForServicePersonId"
+    description: "CallForServicePersonId"
 - datatype: "Int16"
   piiField: false
   analyzer: "STANDARD"
@@ -28,6 +31,18 @@ propertyTypes:
   - type: "ICDC.Priority"
     title: "Priority"
     description: "Priority"
+  - type: "ICDC.OSQ"
+    title: "OSQ"
+    description: "OSQ"
+  - type: "ICDC.Type"
+    title: "Type"
+    description: "Type"
+  - type: "ICDC.NCIC"
+    title: "NCIC"
+    description: "NCIC"
+  - type: "ICDC.Age"
+    title: "Age"
+    description: "Age"
 - datatype: "Int64"
   piiField: false
   analyzer: "STANDARD"
@@ -41,6 +56,9 @@ propertyTypes:
   - type: "ICDC.DispatchNumber"
     title: "DispatchNumber"
     description: "DispatchNumber"
+  - type: "ICDC.DispatchPersonId"
+    title: "DispatchPersonId"
+    description: "DispatchPersonId"
 - datatype: "Date"
   piiField: false
   analyzer: "STANDARD"
@@ -48,6 +66,9 @@ propertyTypes:
   - type: "ICDC.DispatchDate"
     title: "DispatchDate"
     description: "DispatchDate"
+  - type: "ICDC.DOB"
+    title: "DOB"
+    description: "DOB"
 - datatype: "DateTimeOffset"
   piiField: false
   analyzer: "STANDARD"
@@ -87,6 +108,12 @@ propertyTypes:
   - type: "ICDC.Active"
     title: "Active"
     description: "Active"
+  - type: "ICDC.TransferVehicle"
+    title: "TransferVehicle"
+    description: "TransferVehicle"
+  - type: "ICDC.Juv"
+    title: "Juv"
+    description: "Juv"
 - datatype: "String"
   piiField: false
   analyzer: "STANDARD"
@@ -256,6 +283,93 @@ propertyTypes:
   - type: "ICDC.TripNumber"
     title: "TripNumber"
     description: "TripNumber"
+  - type: "ICDC.OName"
+    title: "OName"
+    description: "OName"
+  - type: "ICDC.OAddress"
+    title: "OAddress"
+    description: "OAddress"
+  - type: "ICDC.OAddressApt"
+    title: "OAddressApt"
+    description: "OAddressApt"
+  - type: "ICDC.OCity"
+    title: "OCity"
+    description: "OCity"
+  - type: "ICDC.OState"
+    title: "OState"
+    description: "OState"
+  - type: "ICDC.OZip"
+    title: "OZip"
+    description: "OZip"
+  - type: "ICDC.OPhone"
+    title: "OPhone"
+    description: "OPhone"
+  - type: "ICDC.OSex"
+    title: "OSex"
+    description: "OSex"
+  - type: "ICDC.ORace"
+    title: "ORace"
+    description: "ORace"
+  - type: "ICDC.VehicleMake"
+    title: "VehicleMake"
+    description: "VehicleMake"
+  - type: "ICDC.VehicleModel"
+    title: "VehicleModel"
+    description: "VehicleModel"
+  - type: "ICDC.VehicleYear"
+    title: "VehicleYear"
+    description: "VehicleYear"
+  - type: "ICDC.VehicleVIN"
+    title: "VehicleVIN"
+    description: "VehicleVIN"
+  - type: "ICDC.VehicleColor"
+    title: "VehicleColor"
+    description: "VehicleColor"
+  - type: "ICDC.VehicleStyle"
+    title: "VehicleStyle"
+    description: "VehicleStyle"
+  - type: "ICDC.LIC"
+    title: "LIC"
+    description: "LIC"
+  - type: "ICDC.LIS"
+    title: "LIS"
+    description: "LIS"
+  - type: "ICDC.CellPhone"
+    title: "CellPhone"
+    description: "CellPhone"
+  - type: "ICDC.BadgeNumber"
+    title: "BadgeNumber"
+    description: "BadgeNumber"
+  - type: "ICDC.Height"
+    title: "Height"
+    description: "Height"
+  - type: "ICDC.Weight"
+    title: "Weight"
+    description: "Weight"
+  - type: "ICDC.Eyes"
+    title: "Eyes"
+    description: "Eyes"
+  - type: "ICDC.Hair"
+    title: "Hair"
+    description: "Hair"
+  - type: "ICDC.Ethnicity"
+    title: "Ethnicity"
+    description: "Ethnicity"
+  - type: "ICDC.Additional"
+    title: "Additional"
+    description: "Additional"
+  - type: "ICDC.LIT"
+    title: "LIT"
+    description: "LIT"
+  - type: "ICDC.LIY"
+    title: "LIY"
+    description: "LIY"
+  - type: "ICDC.MNINumber"
+    title: "MNINumber"
+    description: "MNINumber"
+  - type: "ICDC.MVINumber"
+    title: "MVINumber"
+    description: "MVINumber"
 entityTypes:
 - type: "ICDC.Employee"
   title: "Employee"
@@ -362,6 +476,54 @@ entityTypes:
   - "ICDC.TripNumber"
   - "ICDC.TypeId"
   - "ICDC.OfficerId"
+- type: "ICDC.DispatchPerson"
+  title: "DispatchPerson"
+  description: "DispatchPerson"
+  baseType: null
+  key:
+  - "ICDC.DispatchPersonId"
+  properties:
+  - "ICDC.DispatchPersonId"
+  - "ICDC.DispatchId"
+  - "ICDC.OfficerId"
+  - "ICDC.DOB"
+  - "ICDC.OSQ"
+  - "ICDC.OName"
+  - "ICDC.OAddress"
+  - "ICDC.OAddressApt"
+  - "ICDC.OCity"
+  - "ICDC.OState"
+  - "ICDC.OZip"
+  - "ICDC.OPhone"
+  - "ICDC.OSex"
+  - "ICDC.ORace"
+  - "ICDC.Type"
+  - "ICDC.VehicleMake"
+  - "ICDC.VehicleModel"
+  - "ICDC.VehicleYear"
+  - "ICDC.VehicleVIN"
+  - "ICDC.VehicleColor"
+  - "ICDC.VehicleStyle"
+  - "ICDC.LIC"
+  - "ICDC.LIS"
+  - "ICDC.NCIC"
+  - "ICDC.CellPhone"
+  - "ICDC.CallForServicePersonId"
+  - "ICDC.BadgeNumber"
+  - "ICDC.Age"
+  - "ICDC.Height"
+  - "ICDC.Weight"
+  - "ICDC.Eyes"
+  - "ICDC.Hair"
+  - "ICDC.Ethnicity"
+  - "ICDC.Additional"
+  - "ICDC.TransferVehicle"
+  - "ICDC.Juv"
+  - "ICDC.LIT"
+  - "ICDC.LIY"
+  - "ICDC.MNINumber"
+  - "ICDC.MVINumber"
+  - "ICDC.UpsizeTs"
 associationTypes: []
 entitySets:
 - type: "ICDC.Employee"
@@ -382,6 +544,13 @@ entitySets:
   name: "IowaCityDispatchCenter_DispatchTypes"
   title: "Iowa City Dispatch Center - Dispatch Types"
   description: "All Iowa City Dispatch Center Dispatch Types"
+  contacts:
+  - "David-Schwindt@iowa-city.org"
+  - "support@openlattice.com"
+- type: "ICDC.DispatchPerson"
+  name: "IowaCityDispatchCenter_DispatchPersons"
+  title: "Iowa City Dispatch Center - Dispatch Persons"
+  description: "All Iowa City Dispatch Center Dispatch Persons"
   contacts:
   - "David-Schwindt@iowa-city.org"
   - "support@openlattice.com"
