--- a/IowaCityDispatchCenter/build.gradle
+++ b/IowaCityDispatchCenter/build.gradle
@@ -67,7 +67,7 @@ task launcherJar(type: Jar) {
     appendix = "launcher"
     doFirst {
         manifest {
-            attributes "Class-Path": configurations.runtime.files.collect {File file-> file.name }.join(" ")
+            attributes "Class-Path": configurations.compile.files.collect {File file-> file.name }.join(" ")
         }
     }
 }
