--- a/DaneCountyWI/src/main/resources/edm.yaml
+++ b/DaneCountyWI/src/main/resources/edm.yaml
@@ -409,6 +409,27 @@ propertyTypes:
   - type: "publicsafety.OffenseViolatedLocalStatute"
     title: "Local Statute"
     description: "Local statute violated."
+  - type: "location.city"
+    title: "City"
+    description: "A city"
+  - type: "location.street"
+    title: "Street"
+    description: "A street address"
+  - type: "location.state"
+    title: "State"
+    description: "A state"
+  - type: "location.zip"
+    title: "Zip"
+    description: "A zip"
+  - type: "justice.address"
+    title: "Address String"
+    description: "Address of an event"
+  - type: "justice.Location"
+    title: "Location String"
+    description: "Location of an event"
+  - type: "location.id"
+    title: "Location Id"
+    description: "The id of a location"
 
 entityTypes:
 - type: "justice.agency"
@@ -638,6 +659,19 @@ entityTypes:
     - "j.RegisteredOffenderEntryDate"
     - "j.SentenceModificationProbationIndicator"
   baseType: null
+- type: "general.Address"
+  title: "Address"
+  description: "An address"
+  key:
+  - "location.street"
+  - "location.city"
+  - "location.state"
+  - "location.zip"
+  properties:
+  - "location.street"
+  - "location.city"
+  - "location.state"
+  - "location.zip"
 
 associationTypes:
 - type:
@@ -757,6 +791,19 @@ associationTypes:
   - "justice.ChargeDetails"
   dst:
   - "justice.Sentence"
+- type:
+    type: "location.livesat"
+    title: "Lives at"
+    description: "An association describe that location at which an entity lives"
+    key:
+    - "general.stringid"
+    properties:
+    - "general.stringid"
+  src:
+  - "general.person"
+  dst:
+  - "general.Address"
+  bidirectional: false
 
 entitySets:
 - type: "justice.case"
@@ -1143,3 +1190,43 @@ entitySets:
   - "support@openlattice.com"
   owners:
   - auth0|58c2d01b3c9c2b7caff49ce3
+- type: "general.person"
+  name: "MSOSuspects"
+  title: "Middlesex Suspects"
+  description: "Suspects arrested in Middlesex"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "general.Address"
+  name: "MSOAddresses"
+  title: "Middlesex Suspect Addresses"
+  description: "Home addresses of arrested Middlesex suspects"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "justice.booking"
+  name: "MSOBookings"
+  title: "Middlesex Bookings"
+  description: "Bookings of arrested Middlesex suspects"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "justice.booked"
+  name: "MSOBooked"
+  title: "Appears In Bookings"
+  description: "Appears in booking of arrested Middlesex suspect"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "location.livesat"
+  name: "MSOLivesAt"
+  title: "Lives At"
+  description: "Address Middlesex Suspect Lives At"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
