--- a/MiddlesexMA/src/main/resources/edm.yaml
+++ b/MiddlesexMA/src/main/resources/edm.yaml
@@ -307,6 +307,9 @@ propertyTypes:
   - type: "location.zip"
     title: "Zip"
     description: "A zip"
+  - type: "location.street"
+    title: "Street"
+    description: "A street address"
   - type: "justice.weapons"
     title: "Weapons"
     description: "Weapons found during an arrest"
@@ -427,18 +430,6 @@ propertyTypes:
   - type: "publicsafety.OffenseViolatedLocalStatute"
     title: "Local Statute"
     description: "Local statute violated."
-  - type: "location.city"
-    title: "City"
-    description: "A city"
-  - type: "location.street"
-    title: "Street"
-    description: "A street address"
-  - type: "location.state"
-    title: "State"
-    description: "A state"
-  - type: "location.zip"
-    title: "Zip"
-    description: "A zip"
   - type: "justice.address"
     title: "Address String"
     description: "Address of an event"
@@ -448,9 +439,6 @@ propertyTypes:
   - type: "location.address"
     title: "Unparsed location address"
     description: "Location of an event"
-  - type: "location.id"
-    title: "Location Id"
-    description: "The id of a location"
 
 entityTypes:
 - type: "justice.agency"
@@ -624,6 +612,7 @@ entityTypes:
     - "publicsafety.OffenseStartDate"
     - "publicsafety.OffenseEndDate"
     - "publicsafety.OffenseReleaseDate"
+    - "justice.EventType"
     - "j.CourtEventCase"
     - "j.ArrestCharge"
     - "publicsafety.include"
@@ -633,6 +622,7 @@ entityTypes:
     - "publicsafety.ChargeAgency"
     - "publicsafety.AlternateStartDate"
     - "j.ChargeNCICText"
+    - "justice.CaseStatus"
   baseType: null
 - type: "justice.Offense"
   title: "Offense"
@@ -692,10 +682,9 @@ entityTypes:
   title: "Address"
   description: "An address"
   key:
-  - "location.id"
+  - "location.address"
   properties:
   - "location.address"
-  - "location.id"
   - "location.street"
   - "location.city"
   - "location.state"
@@ -748,6 +737,7 @@ associationTypes:
   - "justice.charge"
   - "justice.ChargeDetails"
   dst:
+  - "lawenforcement.arrest"
   - "justice.case"
   - "justice.JailBooking"
   - "justice.booking"
@@ -768,15 +758,17 @@ associationTypes:
 - type:
     type: "justice.chargedwith"
     title: "Charged With"
-    description: "An association which describes that one entity was assigned to another"
+    description: "An association which describes that one entity was charged with charges"
     key:
     - "general.stringid"
     properties:
     - "general.stringid"
   src:
   - "justice.charge"
+  - "general.person"
   dst:
   - "general.person"
+  - "justice.ChargeDetails"
   bidirectional: false
 - type:
     type: "justice.detailsof"
@@ -856,15 +848,17 @@ associationTypes:
     title: "Occurred At"
     description: "Links together a event with a location where it occurred."
     key:
-    - "location.id"
-    - "nc.SubjectIdentification"
+    - "general.stringid"
+    - "location.address"
     properties:
-    - "j.ArrestSequenceID"
-    - "nc.SubjectIdentification"
+    - "general.stringid"
+    - "location.address"
   src:
-  - "general.person"
-  dst:
   - "lawenforcement.arrest"
+  - "justice.ChargeDetails"
+  - "justice.charge"
+  dst:
+  - "general.Address"
   bidirectional: false
 - type:
     type: "justice.booked"
@@ -1303,6 +1297,62 @@ entitySets:
   name: "MSOLivesAt"
   title: "Lives At"
   description: "Address Middlesex Suspect Lives At"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "general.person"
+  name: "LPDArrestSuspects"
+  title: "Lowell PD Arrested Suspects"
+  description: "Lowell PD Arrested Suspects"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "lawenforcement.arrest"
+  name: "LPDArrest"
+  title: "Lowell PD Arrests"
+  description: "Lowell PD Arrests"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "justice.ChargeDetails"
+  name: "LPDCharge"
+  title: "Lowell PD Charges"
+  description: "Lowell PD Charge Information"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "justice.occurredat"
+  name: "LPDOccurredAt"
+  title: "LPD Occured at"
+  description: "LPD locations at which things have occurred"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "justice.chargedwith"
+  name: "LPDChargedWith"
+  title: "LPD Charged with"
+  description: "Represents all charged with instances"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "general.appearsin"
+  name: "LPDChargeAppearsIn"
+  title: "LPD Charges Appears In"
+  description: "Represents all charges appearing"
+  contacts:
+  - "support@openlattice.com"
+  owners:
+  - "auth0|59a985a557d70e1088c0c425"
+- type: "lawenforcement.arrestedin"
+  name: "LPDArrestedIn"
+  title: "LPD Arrested In"
+  description: "Represents all arrests in"
   contacts:
   - "support@openlattice.com"
   owners:
